V0 of the pipeline

--- a/results/01_cgi_cpg_status.Rmd
+++ b/results/01_cgi_cpg_status.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "CpG status of probes aggregate reduced, slice 100pb"
+title: "Step 1: CpG density of features"
 author: "Florence Pittion, Florent Chuffart"
 date: "`r Sys.Date()`"
 output: 
