--- a/results/03_da_GSE45332.Rmd
+++ b/results/03_da_GSE45332.Rmd
@@ -137,6 +137,17 @@ feats$dnmtkoup_methplusplus = rownames(feats) %in% intersect(gs_dnmtkoup, gs_met
 
 
 
+
+
+```{r}
+feats$l2fc_GSE45332 = NA
+feats$pval_GSE45332 = NA
+feats$l2fc_GSE45332 = NA
+feats$pval_GSE45332 = NA
+```
+
+
+
 # Session Information
 
 ```{r, results="verbatim"}
