--- a/results/01_tss_cpg_status.Rmd
+++ b/results/01_tss_cpg_status.Rmd
@@ -192,8 +192,8 @@ abline(v=thresh)
 plot(pca$x[,1], pca$x[,2], col=km$cluster)
 abline(v=thresh)
 
-idx1 = names(res$cluster)[res$cluster==1]
-idx2 = names(res$cluster)[res$cluster==2]
+idx1 = names(km$cluster)[km$cluster==1]
+idx2 = names(km$cluster)[km$cluster==2]
 
 feats$cpg_status  = NA
 if (mean(mat[idx1,]) < mean(mat[idx2,])) {
